Fix navbar underline alignment to center

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -62,7 +62,8 @@
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 0;
   height: 2px;
   background: var(--accent-color);
